Dashboard, new charts, code cleanup for report viewing and listing, jetty specific change, up down in reports axis, functions

--- a/WebContent/help/designHelp.html
+++ b/WebContent/help/designHelp.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Report Design-Help</title>
+<link rel="stylesheet" type="text/css" href="../js/dojo/dijit/themes/claro/claro.css"/>
+<link rel="stylesheet" type="text/css" href="../js/dojo/dojo/resources/dojo.css"/>
 </head>
 <body>
 <h1 align="center">Report Design</h1>
