--- a/WebContent/help/mappingHelp.html
+++ b/WebContent/help/mappingHelp.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <title>Mapping-Help</title>
+<link rel="stylesheet" type="text/css" href="../js/dojo/dijit/themes/claro/claro.css"/>
+<link rel="stylesheet" type="text/css" href="../js/dojo/dojo/resources/dojo.css"/>
 </head>
 <body>
 <h1 align="center">Mapping</h1>
