Dashboard drag and drop, spider charts, bug fixes

--- a/WebContent/help/designHelp.html
+++ b/WebContent/help/designHelp.html
@@ -20,18 +20,20 @@ than, equals, substring, pattern matches etc using the filters.
 <br>
 <b>Steps to Design Reports</b>
 <br>
-<b>Step 1:</b>&nbsp;Define Report name and select mapping. 
+<b>Step 1:</b>&nbsp;Define Report name, select mapping and check DashBoard if you want to add report
+	to DashBoard(Only one report Can be added to DashBoard at a time). 
 <br>
 <img align="middle" src="../Images/design_step1.jpg"/> 
 <br>
 <b>Step 2:</b>&nbsp;Select Design tab.
 <br>
-<b>Step 3:</b>&nbsp;Select report type.
+<b>Step 3:</b>&nbsp;Select report type. Here you need to select chartType for your particular data.
 <br>
 <img align="middle" src="../Images/design_step3.jpg"/> 
 <br>
 <b>Step 4:</b>&nbsp;Drag Alias's from Dimension and Measure list to X-Axis and Y-Axis pane to define your
- 		report. 
+ 		report. Once dragged we can reorder the alias by dragging. Every alias dropped in pane has attached
+ 		dropDown button which allows to apply any number of allowed functions to that alias.
 <br>
 <img align="middle" src="../Images/design_step4.jpg"/> 
 <br>
